# GEMS

./: .gitignore  .readthedocs.yml  .yamllint.yml  AGENTS.md  CHANGELOG-gems-language.md  CHECKLIST_VERIFICATION.md  CLAUDE.md  COMPATIBILITY.md  IMPLEMENTATION_SUMMARY.md  INDEX_YAML_LOADER.md  LOCAL_SITE_README.md  PR_DESCRIPTION.md  README.md  YAML_LOADER_QUICKSTART.md  YAML_LOADER_README.md  check-yaml-loader-installation.sh  dependencies.json  ihm configuration.yml  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
business_view/: antares_legacy_area_catalog.yml  antares_legacy_catalog.yml  antares_legacy_link_catalog.yml  antares_legacy_thermal_cluster_catalog.yml
catalogs/: antares_legacy_area_catalog.yml  antares_legacy_link_catalog.yml  antares_legacy_thermal_cluster_catalog.yml
doc/: YAML_LOADER_TECHNICAL.md  index.md  mkdocs.yml  robots.txt  template.md
gui-configuration/: connections configuration.yml  ihm configuration.yml
libraries/: CHANGELOG-antares_legacy_models.md  CHANGELOG-pypsa_models.md  andromede_models.yml  andromede_models.yml.sha256  antares_legacy_models.yml  antares_legacy_models.yml.sha256  basic-models-library.yml  basic_models_library.yml  connections configuration  ihm configuration  pypsa_models.sha256  pypsa_models.yml  pypsa_models.yml.sha256  taxonomy configuration
resources/: yaml-loader-example.yaml
taxonomies/: antares_legacy_taxonomy.yml  taxonomy configuration.yml  taxonomy_example.yml
tests/: utilis.py
versions/: andromede_models.txt  (+5 more)
(+485 files in other folders)
