[project]
name = "gems"
version = "0.3.3"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
test = [
    "gemspy==0.1.0",
    "matplotlib==3.10.9",
    "pandas>=2.2.3",
    "pytest>=7.0.1",
    "pytest-xdist>=3.8.0",
]
dev = [
    { include-group = "test" },
    "mypy>=1.15.0",
    "pandas-stubs",
    "ruff>=0.9.10",
    "types-PyYAML",
    "yamllint>=1.35.1",
]
doc = [
    "gemspy==0.1.0",
    "matplotlib==3.10.9",
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-jupyter",
    "mkdocs-macros-plugin",
    "mkdocs-material",
    "mkdocs-redirects",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["tests/"]
exclude = ["tests/e2e_tests/test_", "tests/e2e_tests/conftest\\.py"]
